[package]
name = "NESemu"
version = "0.1.0"
authors = ["Daniel Bauer <bauer@cbs.tu-darmstadt.de>"]
edition = "2018"

[features]
test = []

[dependencies]
log = "0.4.*"
simple_logger = "1.3.*"
phf = { version = "0.8", features = ['macros'] }
failure = "0.1.*"
lazy_static = "1.4.*"
piston_window = "0.105.*"
piston2d-opengl_graphics = "0.70.*"
gfx_core = "0.9.2"
gfx_device_gl = "0.16.*"
gfx_glyph = "0.16.*"